FIX Login screen on iphone5

--- a/www/scss/app.scss
+++ b/www/scss/app.scss
@@ -164,13 +164,14 @@ button {
     img{
       opacity: .9;
       margin-bottom: 1rem;
+      width:100%;
     }
   }
   .list{
     margin-bottom: 0;
   }
   .row{
-    padding: 20% 1rem;
+    padding: 10% 1rem;
   }    
   .toggle .track{
     background-color: $darkgrey;
